src/test/ui/issues/issue-31173.stderr
error[E0271]: type mismatch resolving `<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]> as std::iter::Iterator>::Item == &_`
  --> $DIR/issue-31173.rs:14:10
   |
LL |         .cloned()
   |          ^^^^^^ expected `u8`, found reference
   |
   = note:   expected type `u8`
           found reference `&_`

error[E0599]: no method named `collect` found for struct `std::iter::Cloned<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]>>` in the current scope
  --> $DIR/issue-31173.rs:18:10
   |
LL |         .collect();
   |          ^^^^^^^ method not found in `std::iter::Cloned<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]>>`
   | 
  ::: $SRC_DIR/libcore/iter/adapters/mod.rs:LL:COL
   |
LL | pub struct Cloned<I> {
   | -------------------- doesn't satisfy `_: std::iter::Iterator`
...
LL | pub struct TakeWhile<I, P> {
   | -------------------------- doesn't satisfy `<_ as std::iter::Iterator>::Item = &_`
   |
   = note: the method `collect` exists but the following trait bounds were not satisfied:
           `<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]> as std::iter::Iterator>::Item = &_`
           which is required by `std::iter::Cloned<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]>>: std::iter::Iterator`
           `std::iter::Cloned<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]>>: std::iter::Iterator`
           which is required by `&mut std::iter::Cloned<std::iter::TakeWhile<&mut std::vec::IntoIter<u8>, [closure@$DIR/issue-31173.rs:10:39: 13:6 found_e:_]>>: std::iter::Iterator`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0599.
For more information about an error, try `rustc --explain E0271`.
